Fix next piece not showing on first piece

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 .next-tetromino {
     display: grid;
     width: 100%;
-    height: 15%;
+    height: 14%;
     padding: 1vmin;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
